--- a/_posts/2023-12-04-min-quad.md
+++ b/_posts/2023-12-04-min-quad.md
@@ -76,5 +76,169 @@ $$ (a,b)=\int_{\alpha}^{\beta}a(x)\cdot{}b(x)\cdot{}dx $$
 
 Feito isso para cada produto escalar (dependendo da equação que busca-se modelar, pode ser que produtos escalares sejam repetidos), basta resolver o sistema linear.
 
-## Método discreto
+### Exemplo do método contínuo
+Aproxime uma função polinomial quadrática para a equação $$x^4-5x$$, no domínio de -1 a 1, pelo método dos mínimos quadrados para o caso contínuo.
 
+$$ \begin{pmatrix}
+    (1,1)&(x,1)&(x^2,1)\\
+    (1,x)&(x,x)&(x^2,x)\\
+    (1,x^2)&(x,x^2)&(x^2,x^2)    
+\end{pmatrix}
+    \begin{pmatrix}
+        a_0\\
+        a_1\\
+        a_2
+    \end{pmatrix}=
+    \begin{pmatrix}
+        (x^4-5x,1)\\
+        (x^4-5x,x)\\
+        (x^4-5x,x^2)
+    \end{pmatrix} $$
+
+Resolvendo os produtos escalares:
+- \$$(1,1)=\int_{-1}^{1}dx=x\to{}1-(-1)=2$$
+- \$$(1,x)=(x,1)=\int_{-1}^{1}x\cdotp{}dx=\frac{x^2}{2}\to{}\frac{1}{2}-(\frac{1}{2})=0$$
+- \$$(1,x^2)=(x^2,1)=(x,x)=\int_{-1}^{1}x^2\cdotp{}dx=\frac{x^3}{3}\to{}\frac{1}{3}-\frac{-1}{3}=\frac{2}{3}$$
+- \$$(x,x^2)=(x^2,x)=\int_{-1}^{1}x^3\cdotp{}dx=\frac{x^4}{4}\to{}0$$
+- \$$(x^2,x^2)=\int_{-1}^{1}x^4\cdotp{}dx=\frac{x^5}{5}\to{}\frac{2}{5}$$
+- \$$(x^4-5x,1)=\int_{-1}^{1}x^4-5x\cdotp{}dx=\frac{x^5}{5}-\frac{5x^2}{2}\to{}\frac{2}{5}$$
+- \$$(x^4-5x,x)=\int_{-1}^{1}x^5-5x^2\cdotp{}dx=\frac{x^6}{6}-\frac{5x^3}{3}\to{}-\frac{10}{3}$$
+- \$$(x^4-5x,x^2)=\int_{-1}^{1}x^6-5x^3\cdotp{}dx=\frac{x^7}{7}-\frac{5x^4}{4}\to{}\frac{2}{7}$$
+
+De forma que obtemos:
+
+$$ \begin{pmatrix}
+    2&0&\frac{2}{3}\\
+    0&\frac{2}{3}&0\\
+    \frac{2}{3}&0&\frac{2}{5}
+\end{pmatrix}\cdotp{}\begin{pmatrix}
+    a_0\\
+    a_1\\
+    a_2
+\end{pmatrix}=\begin{pmatrix}
+    \frac{2}{5}\\
+    -\frac{10}{3}\\
+    \frac{2}{7}
+\end{pmatrix} $$
+
+Resolvendo o sistema, temos:
+- \$$a_0=-\frac{3}{35}$$
+- \$$a_1=-5$$
+- \$$a_2=\frac{6}{7}$$
+
+Logo, a equação polinomial que aproxima a função é:
+
+$$ F(x)=\frac{6}{7}x^2-5x-\frac{3}{35} $$
+
+## Método discreto
+Já para o método discreto, ele é usado para determinar uma função que aproxime um conjunto de pontos, de tal forma que a distância entre os pontos e a função seja minimizada. Para isso, modela-se uma função do tipo:
+
+$$ P_{m}(x)=a_0+a_1\cdotp{}x+\dotsc{}+a_m\cdotp{}x^m $$
+
+Para auxiliar, definimos as matrizes:
+
+$$ y=\begin{pmatrix}
+    y_0\\y_1\\\dotsm{}\\y_m
+\end{pmatrix}\space{}u_i=\begin{pmatrix}
+    x_0^i\\
+    x_1^i\\
+    \dotsm{}\\
+    x_m^i
+\end{pmatrix} $$
+
+De forma que podemos encontrar os coeficientes através do sistema linear:
+
+$$ \begin{pmatrix}
+    (u_0,u_0)&(u_1,u_0)&\dotsm{}&(u_m,u_0)\\
+    (u_0,u_1)&(u_1,u_1)&\dotsm{}&(u_m,u_1)\\
+    \dotsm{}&\dotsm{}&\dotsm{}&\dotsm{}\\
+    (u_0,u_m)&(u_1,u_m)&\dotsm{}&(u_m,u_m)\\
+\end{pmatrix} \cdotp{}\begin{pmatrix}
+    a_0\\
+    a_1\\
+    \dotsm{}\\
+    a_m
+\end{pmatrix}=\begin{pmatrix}
+    (y,u_0)\\
+    (y,u_1)\\
+    \dotsm{}\\
+    (y,u_m)
+\end{pmatrix}$$
+
+### Exemplo do método discreto
+Modele uma função polinomial quadrática que aproxime os pontos:
+
+|   x   |  -1   |   0   |   1   |   2   |
+| :---: | :---: | :---: | :---: | :---: |
+|   y   |   0   |  -1   |   0   |   7   |
+
+Seja:
+
+$$ f(x)=a_0+a_1x+a_2x^2 $$
+
+Temos que:
+
+$$ y=\begin{pmatrix}
+    0\\-1\\0\\7
+\end{pmatrix}\space{}u_0=\begin{pmatrix}
+    1\\1\\1\\1
+\end{pmatrix}\space{}u_1=\begin{pmatrix}
+    -1\\0\\1\\2
+\end{pmatrix}\space{}u_2=\begin{pmatrix}
+    1\\0\\1\\4
+\end{pmatrix} $$
+
+Tal que a resolução do sistema linear a seguir nos fornece o valor dos coeficientes:
+
+$$ \begin{pmatrix}
+    (u_0,u_0)&(u_1,u_0)&(u_2,u_0)\\
+    (u_0,u_1)&(u_1,u_1)&(u_2,u_1)\\
+    (u_0,u_2)&(u_1,u_2)&(u_2,u_2)\\
+\end{pmatrix} \cdotp{}\begin{pmatrix}
+    a_0\\
+    a_1\\
+    a_2
+\end{pmatrix}=\begin{pmatrix}
+    (y,u_0)\\
+    (y,u_1)\\
+    (y,u_2)
+\end{pmatrix}$$
+
+Sendo que:
+- \$$(u_0,u_0)=1\cdotp{}1+1\cdotp{}1+1\cdotp{}1+1\cdotp{}1=4$$
+- \$$(u_1,u_0)=1\cdotp{}(-1+0+1+2)=2$$
+- \$$(u_2,u_0)=1\cdotp{}(1+0+1+4)=6$$
+- \$$(u_0,u_1)=2$$
+- \$$(u_1,u_1)=-1\cdotp{}-1+0\cdotp{}0+1\cdotp{}1+2\cdotp{}2=6$$
+- \$$(u_2,u_1)=1\cdotp{}(-1)+0\cdotp{}0+1\cdotp{}1+4\cdotp{}2=8$$
+- \$$(u_0,u_2)=6$$
+- \$$(u_1,u_2)=8$$
+- \$$(u_2,u_2)=1+0+1+16=18$$
+- \$$(y,u_0)=0-1+0+7=6$$
+- \$$(y,u_1)=0+0+0+14=14$$
+- \$$(y,u_2)=28$$
+
+Tal que o sistema linear a ser solucionado fica na forma de:
+
+$$ \begin{pmatrix}
+    (4)&(2)&(6)\\
+    (2)&(6)&(8)\\
+    (6)&(8)&(18)\\
+\end{pmatrix} \cdotp{}\begin{pmatrix}
+    a_0\\
+    a_1\\
+    a_2
+\end{pmatrix}=\begin{pmatrix}
+    (6)\\
+    (14)\\
+    (28)
+\end{pmatrix}$$
+
+Tal que a solução do problema linear é:
+- \$$a_0=-\frac{8}{5}$$
+- \$$a_1=\frac{1}{5}$$
+- \$$a_2=2$$
+
+E a equação polinomial que aproxima os pontos é:
+
+$$ P(x)=-\frac{8}{5}+\frac{1}{5}x+2x^2 $$
